[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 127
exclude = [".git", "__pycache__", "build", "dist"]
ignore = ["E203", "W503"]

[tool.pylint.messages_control]
disable = ["C0114", "C0116"]

[tool.pylint.format]
max-line-length = 127

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 